--- a/client/src/components/ListProducts/List.css
+++ b/client/src/components/ListProducts/List.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     margin-bottom: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px gray solid
 }
 
 .containerProductInfo{
@@ -14,4 +16,17 @@
 .imgProducts{
 	width: 10rem;
 	height: 10rem;
+    object-fit: contain;
+}
+.priceProduct{
+    font-weight: 600;
+}
+.btnBuy{
+    background-color: rgb(55, 150, 209);
+    border-radius: 5px;
+    width: 5rem;
+    height: 1.3rem;
+    border: none;
+    color: aliceblue;
+    letter-spacing: 1px;
 }
